--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@ element.style {
 <h1>아무것도 안했는데 벌써</h1>
 <br>
 <span id = "clock"></span>
+<br>
+<br>
+<img src="C:\Users\영서네\Desktop\seo/뚱보노보노.jpg" width="400" height="400">
 </div>
 
 
